maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:30: error: ';' expected but 'else' found.
   else if (!hasTopWall(x, y) && hasLeftWall(x,y) && !isMarked(x, y - 1)){
   ^